// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-101j5b"
    data-testid="audio"
  />
   
  <div
    class="flex items-center svelte-101j5b"
  >
    <span
      class="current svelte-101j5b"
    />
     
    <div
      class="player svelte-101j5b"
    >
      <span
        class="controls svelte-101j5b"
      >
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-rsfl0b iconOnly noBorder"
          >
            <i
              class="material-icons svelte-rsfl0b"
            >
              shuffle
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="ml-2 mr-1 svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            skip_previous
          </i>
           
           
           
        </button>
         
        <button
          class="mx-1 svelte-rsfl0b iconOnly large"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="ml-1 mr-2 svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            skip_next
          </i>
           
           
           
        </button>
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-rsfl0b iconOnly noBorder"
          >
            <i
              class="material-icons svelte-rsfl0b"
            >
              repeat
            </i>
             
             
             
          </button>
        </span>
         
      </span>
       
      <span
        class="controls time svelte-101j5b"
      >
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-101j5b"
    >
      <div
        class="volume svelte-101j5b"
      >
        <span
          class="volume-slider svelte-101j5b"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            volume_up
          </i>
           
           
           
        </button>
      </div>
       
      <button
        class="svelte-rsfl0b primary"
      >
        <i
          class="material-icons svelte-rsfl0b"
        >
          queue_music
        </i>
         
        <span>
          Open queue
        </span>
         
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-101j5b"
    data-testid="audio"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-101j5b"
  >
    <span
      class="current svelte-101j5b"
    >
      <div
        class="undefined root svelte-whrgz7"
      >
        <a
          class="flex-none"
          href="#/album/1"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-whrgz7"
        >
          <span
            class="title svelte-whrgz7"
          >
            file 1
          </span>
           
          <a
            class="text-sm underlined"
            href="#/artist/0"
            onclick="event.stopPropagation()"
          >
            Someone
          </a>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-101j5b"
    >
      <span
        class="controls svelte-101j5b"
      >
        <span
          class="wrapper svelte-12ofrds"
        >
          <button
            class="svelte-rsfl0b iconOnly noBorder"
          >
            <i
              class="material-icons svelte-rsfl0b"
            >
              library_add
            </i>
             
             
            
             
          </button>
        </span>
         
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-rsfl0b iconOnly noBorder"
          >
            <i
              class="material-icons svelte-rsfl0b"
            >
              shuffle
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="ml-2 mr-1 svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            skip_previous
          </i>
           
           
           
        </button>
         
        <button
          class="mx-1 svelte-rsfl0b iconOnly large"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="ml-1 mr-2 svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            skip_next
          </i>
           
           
           
        </button>
         
        <span
          class="svelte-101j5b"
        >
          <button
            class="svelte-rsfl0b iconOnly noBorder"
          >
            <i
              class="material-icons svelte-rsfl0b"
            >
              repeat
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="invisible svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            favorite_border
          </i>
           
           
           
        </button>
      </span>
       
      <span
        class="controls time svelte-101j5b"
      >
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-101j5b"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-101j5b"
    >
      <div
        class="volume svelte-101j5b"
      >
        <span
          class="volume-slider svelte-101j5b"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-rsfl0b iconOnly noBorder"
        >
          <i
            class="material-icons svelte-rsfl0b"
          >
            volume_up
          </i>
           
           
           
        </button>
      </div>
       
      <button
        class="svelte-rsfl0b primary"
      >
        <i
          class="material-icons svelte-rsfl0b"
        >
          queue_music
        </i>
         
        <span>
          Open queue
        </span>
         
         
        <div
          class="badge svelte-rsfl0b halo"
        >
          4
        </div>
      </button>
    </span>
  </div>
</section>
`;
